[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/components/movement/Movement.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/Mushroom.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/characters/shrooms/gloom_shroom.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "boom",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9, 7 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 37, 10 )

[sub_resource type="Animation" id=12]
resource_name = "boom"
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "boom", false ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "add_explosion"
}, {
"args": [  ],
"method": "reset_movement"
} ]
}

[node name="Mushroom" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
is_spores_mushroom = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "walk"
frame = 2
playing = true
flip_h = true

[node name="Components" type="Node2D" parent="."]

[node name="Movement" parent="Components" instance=ExtResource( 1 )]
animated_sprite = NodePath("../../AnimatedSprite")
kinematic_body = NodePath("../..")
move_speed = 30
is_flipped = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( -1, 1 )
shape = SubResource( 10 )

[node name="SporesTrigger" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SporesTrigger"]
position = Vector2( 0, -2 )
shape = SubResource( 11 )

[node name="ExplosionAnimationPlayer" type="AnimationPlayer" parent="."]
anims/boom = SubResource( 12 )
